improve portal swagger docs
